# pplug-power

./: meson.build
data/: meson.build
debian/: changelog  control  copyright  lpplug-power.install  lxplug-power.install  wfplug-power.install
po/: POTFILES.in  en_GB.po  hy.po  it.po  ja.po  ko.po  pl.po  pt_BR.po  sk.po  zh_CN.po
src/: meson.build  power.c  power.cpp  power.h  power.hpp
